objects/Application__c/fields/Maintenance_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_End_Time__c</fullName>
    <label>Maintenance End Time</label>
    <type>DateTime</type>
</CustomField>