objects/Application__c/fields/Maintenance_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Start_Time__c</fullName>
    <label>Maintenance Start Time</label>
    <type>DateTime</type>
</CustomField>