objects/Application__c/fields/Single_Sign_On__c.field-meta.xml
<CustomField>
    <fullName>Single_Sign_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Sign On</label>
    <type>Checkbox</type>
</CustomField>