objects/Application__c/fields/Terms_Condition_URL__c.field-meta.xml
<CustomField>
    <fullName>Terms_Condition_URL__c</fullName>
    <label>Terms Condition URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>